# ffrknn-ocr

./: CMakeLists.txt  README.md  SDL_FontCache.h  ff-rknn.c  ffrknn.cpp  ffrknn.h  main.cpp  mainprogram.cpp  mainprogram.h  mainprogram.ui  postprocess.cc  postprocess.cpp  postprocess.h  ppocr_rec.cc  ppocr_rec.h  sdlwidget.cpp  sdlwidget.h  vonvision-ai  vonvision-ai-gpu
